feat: enhance documentation with detailed Javadoc comments and add Javadoc Jar task